ajustando los estilos para el nuevo diseño de la home

--- a/css/styles.css
+++ b/css/styles.css
@@ -663,9 +663,6 @@ http://www.tipue.com/search
     color: #333;
     border: 0;
     border: 2px solid #1b305f;
-    border-radius: 10px;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
     outline: 0;
     background-color: #f1f1f1;
 }
@@ -1172,49 +1169,26 @@ path.q2-3 {
     position: relative;
 
     width: 100%;
+    min-height: calc(100vh - 81px);
+    margin-top: 81px;
 }
 
 .bislai-grid-text {
     position: absolute;
-    top: 20%;
-    right: 20px;
+    top: 15%;
+    left: 5%;
 
     width: 40vw;
     padding: 1.88rem;
 
-    background-color: rgba(255, 255, 255, 0.8);
+    color: #f9dfe7;
+    border-radius: 10px;
+    background-color: #021e5c;
 }
 
-img {
-    width: 100%;
-}
-
-.orange {
-    background-color: #f65e35;
-}
-
-.orange img {
-    mix-blend-mode: multiply;
-    -webkit-filter: grayscale(100%) contrast(1.2);
-    filter: grayscale(100%) contrast(1.2);
-}
-
-.orange:after {
-    background-color: #1e3265;
-
-    mix-blend-mode: lighten;
-}
-
-.column:after {
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    height: 100%;
-
-    content: "";
-    transition: all ease-in-out 0.5s;
+.bislai-grid-text a {
+  font-weight: bold;
+  color: #eb7abb;
 }
 
 .btn-share {
@@ -1465,11 +1439,11 @@ img {
 }
 
 .bgc-header-home {
-    background-color: #fbf7f0;
+    background-color: #021e5c;
 }
 
 .color-header {
-    color: #2f17a9;
+    color: #fff;
 }
 
 .bgc-tabs {
