--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -39,6 +39,6 @@
     --bgcTabs: #f45f64;
     --hoverTabs: #212843;
     --searchHover: hsl(201, 106%, 24%);
-    --bgcHeader: #fbf7f0;
-    --colorHeader: #2f17a9;
+    --bgcHeader: #021e5c;
+    --colorHeader: #fff;
 }
