--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,25 +3,22 @@
   http://jorgeatgu.com
 */
 
-@import '_reset';
-@import '_variables';
-@import '_comun';
-@import '_buttons';
-@import '_width';
-@import '_color';
-@import '_display';
-@import '_fonts';
-@import '_margin';
-@import '_textalign';
-@import '_vertical-align';
-@import '_weight';
-@import '_padding';
-@import '_border';
-@import '_height';
-@import '_position';
-@import '_float';
-@import '_hover';
-@import '_letter-spacing';
-@import '_box-shadow';
-
-
+@import "_reset";
+@import "_variables";
+@import "_comun";
+@import "_width";
+@import "_color";
+@import "_display";
+@import "_fonts";
+@import "_margin";
+@import "_textalign";
+@import "_vertical-align";
+@import "_weight";
+@import "_padding";
+@import "_border";
+@import "_height";
+@import "_position";
+@import "_float";
+@import "_hover";
+@import "_letter-spacing";
+@import "_box-shadow";
