--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -20,5 +20,5 @@
     --hoverTabs: #212843;
     --searchHover: hsl(201, 106%, 24%);
     --bgcHeader: #021e5c;
-    --colorHeader: #fff;
+    --pink: #f9dfe7;
 }
