--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -7,6 +7,7 @@
     --greyc: #ccc;
     --white: #fff;
     --pp: #0080b8;
+    --bislai: #021e5c;
     --psoe: #e30613;
     --zec: #9a1622;
     --ciudadanos: #f07a36;
@@ -17,7 +18,6 @@
     --woodsmoke: #19160a;
     --colorlink: #1624f7;
     --bgcTabs: #f45f64;
-    --hoverTabs: #212843;
     --searchHover: hsl(201, 106%, 24%);
     --bgcHeader: #021e5c;
     --pink: #f9dfe7;
