--- a/css/styles.css
+++ b/css/styles.css
@@ -1185,6 +1185,11 @@ path.q2-3 {
   font-weight: bold;
 }
 
+.footer {
+    background-image: url("../img/pattern.svg");
+    background-repeat: repeat;
+}
+
 .maw-70 {
   max-width: 70rem;
   margin: 0 auto;
