--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -799,3 +799,8 @@ path.q2-3 {
         font-weight: bold;
     }
 }
+
+.footer {
+    background-image: url("../img/pattern.svg");
+    background-repeat: repeat;
+}
