--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -22,4 +22,5 @@
     --bgcHeader: #021e5c;
     --pink: #f9dfe7;
     --bgcCard: #28cdc4;
+    --rojoZgz: linear-gradient(190deg, #021e5c 15%, hsl(221, 96%, 58%) 100%);
 }
