--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -1,6 +1,7 @@
 :root {
     --fontSystem: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Helvetica Neue", Helvetica, sans-serif;
+    --fontBislai: "Fjalla One", sans-serif;
     --serif: "Georgia", serif;
     --black: #121;
     --grey: #efefef;
